--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "http-errors": "^2.0.0",
     "multer": "^1.4.4",
     "multer-storage-cloudinary": "^4.0.0",
+    "pdfmake": "^0.2.5",
     "uniqid": "^5.4.0"
   },
   "devDependencies": {
