--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.27.2",
     "cloudinary": "^1.30.0",
     "cors": "^2.8.5",
     "express": "^4.18.1",
@@ -23,6 +24,8 @@
     "multer": "^1.4.4",
     "multer-storage-cloudinary": "^4.0.0",
     "pdfmake": "^0.2.5",
+    "stream": "^0.0.2",
+    "striptags": "^3.2.0",
     "uniqid": "^5.4.0"
   },
   "devDependencies": {
