--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^7.7.0",
     "axios": "^0.27.2",
     "cloudinary": "^1.30.0",
     "cors": "^2.8.5",
@@ -21,12 +22,15 @@
     "express-validator": "^6.14.0",
     "fs-extra": "^10.1.0",
     "http-errors": "^2.0.0",
+    "json2csv": "^5.0.7",
     "multer": "^1.4.4",
     "multer-storage-cloudinary": "^4.0.0",
     "pdfmake": "^0.2.5",
     "stream": "^0.0.2",
     "striptags": "^3.2.0",
-    "uniqid": "^5.4.0"
+    "swagger-ui-express": "^4.4.0",
+    "uniqid": "^5.4.0",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
     "dotenv": "^16.0.1",
